0.02
 - Improve constructor parameters in doc.
 - Update tests to independent of package version.

0.01 2023-05-30T00:01:30+02:00
 - First version.