@@ -19,7 +19,7 @@ perl_version 5.008;
 readme_from 'Password.pm';
 recursive_author_tests('xt');
 requires 'Plack::Util::Accessor' => 0;
-requires 'Plack::Component::Tags::HTML' => 0.13;
+requires 'Plack::Component::Tags::HTML' => 0.15;
 requires 'Tags::HTML::Container' => 0;
 requires 'Tags::HTML::Login::Access' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Plack-App-Login-Password/issues';
