@@ -1,6 +1,7 @@
 0.02
  - Improve constructor parameters in doc.
  - Update tests to independent of package version.
+ - Update minimal version of Plack::Component::Tags::HTML to 0.15.
 
 0.01 2023-05-30T00:01:30+02:00
  - First version.
